--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,18 @@ under the License.
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_${scala.binary.version}</artifactId>
+            <version>0.10.0.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
@@ -174,6 +186,18 @@ under the License.
                     <version>${log4j.version}</version>
                     <scope>provided</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.kafka</groupId>
+                    <artifactId>kafka_${scala.binary.version}</artifactId>
+                    <version>0.10.0.1</version>
+                </dependency>
+                <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+                <dependency>
+                    <groupId>commons-cli</groupId>
+                    <artifactId>commons-cli</artifactId>
+                    <version>1.4</version>
+                </dependency>
+
             </dependencies>
 
             <build>
