Add code for sending udpated quote to kafka.

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@ under the License.
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-api</artifactId>-->
+            <!--<version>1.7.12</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -174,17 +180,23 @@ under the License.
                     <version>${scala.version}</version>
                     <!--<scope>provided</scope> -->
                 </dependency>
+                <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+                <!--<dependency>-->
+                    <!--<groupId>org.slf4j</groupId>-->
+                    <!--<artifactId>slf4j-api</artifactId>-->
+                    <!--<version>1.7.12</version>-->
+                <!--</dependency>-->
                 <dependency>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
                     <version>${slf4j.version}</version>
-                    <scope>provided</scope>
+                    <!--<scope>provided</scope>-->
                 </dependency>
                 <dependency>
                     <groupId>log4j</groupId>
                     <artifactId>log4j</artifactId>
                     <version>${log4j.version}</version>
-                    <scope>provided</scope>
+                    <!--<scope>provided</scope>-->
                 </dependency>
                 <dependency>
                     <groupId>org.apache.kafka</groupId>
@@ -221,7 +233,7 @@ under the License.
                                         <excludes>
                                             <exclude>org.apache.flink:force-shading</exclude>
                                             <exclude>com.google.code.findbgs:jsr305</exclude>
-                                            <exclude>org.slf4j:slf4j-api</exclude>
+                                            <!--<exclude>org.slf4j:slf4j-api</exclude>-->
                                         </excludes>
                                     </artifactSet>
                                     <filters>
